DATA: Model Users & Migrate

--- a/LMS.Web/appsettings.Development.json
+++ b/LMS.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=LMSDBCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
