--- a/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
+++ b/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\USER\.nuget\packages\adotnet\3.0.4\contentFiles\any\netstandard2.1\License.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ADotNet" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
