--- a/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
+++ b/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
@@ -20,6 +20,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Tynamix.ObjectFiller" Version="1.5.9" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
       <PrivateAssets>all</PrivateAssets>
