--- a/LMS.Web/LMS.Web.csproj
+++ b/LMS.Web/LMS.Web.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Xeption" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
