--- a/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
+++ b/LMS.Web.Unit.Tests.Project/LMS.Web.Unit.Tests.Project.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="EFxceptions" Version="0.4.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Tynamix.ObjectFiller" Version="1.5.9" />
