POC GET ALL USER WITH ADD

--- a/LMS.Web/LMS.Web.csproj
+++ b/LMS.Web/LMS.Web.csproj
@@ -18,6 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Blazor" Version="27.1.51" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="27.1.51" />
     <PackageReference Include="Xeption" Version="2.8.0" />
   </ItemGroup>
 
