--- a/LMS.Web/appsettings.Development.json
+++ b/LMS.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=LMSDBCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=LMSDBCorV2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
